# rasa-chatbot-for-sport

./: README.md  add.py  config.yml  database.py  domain.yml  football.db  index.html  pyproject.toml
actions/: action_match_location.py  action_match_red_cards.py  action_match_referee.py  action_match_score.py  action_match_scorers.py  action_match_weather.py  action_match_yellow_cards.py  action_stadium_capacity.py
data/: nlu.yml  rules.yml
