[tool.poetry]
name = "chatbot-sport"
version = "0.1.0"
description = ""
authors = ["hamzayogurtcuoglu <hamzayogurtcuoglu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rasa = "^3.6.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
